dimensao produtos finalizada

--- a/models/staging/sap/sources.yml
+++ b/models/staging/sap/sources.yml
@@ -7,7 +7,7 @@ sources:
     database: equatorial
     schema: raw_northwind
     tables:
-      - name: product
+      - name: products
         columns:
           - name: id
             tests:
