--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -39,6 +39,7 @@ models:
   dbt_northwind:
     # Applies to all files under models/example/
     marts:
+      +materialized: table
 
     staging:
       
