--- a/models/staging/sap/sources.yml
+++ b/models/staging/sap/sources.yml
@@ -15,3 +15,7 @@ sources:
               - not_null               
       - name: category
       - name: supplier
+      - name: orders
+      - name: orders_details
+      - name: employee
+      - name: customer
